# town-builder

./: .dockerignore  .env  .env.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GO_1.24_1.25_SUMMARY.md  GO_OPTIMIZATION_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_COMPLETE.md  JAVASCRIPT_SECURITY_REVIEW.md  JWT_FIX_SUMMARY.md  LICENSE  LICENSE.md  MOBILE_FEATURES.md  PROGRAMMATIC_API.md  README.md  THREEJS_ADVANCED_FEATURES.md  THREEJS_R181_ENHANCEMENTS.md  THREEJS_UPGRADE_R181.md  TODO.md  TODO_JWT.md  app.py  build_wasm.sh  calc.go  go.mod  llm_prompt.md  physics_wasm.go  pyproject.toml  test_new_apis.py  town_builder.py  uwsgi.ini
.claude/commands/: add-model.md  api-docs.md  build-wasm.md  check-deps.md  dev.md  prod.md  redis.md  review-code.md  test.md
.github/workflows/: claude-code-review.yml
app/: config.py  main.py
app/models/: schemas.py
app/routes/: auth.py  batch.py  buildings.py  cursor.py  events.py  history.py  models.py  proxy.py  (+5 more)
data/: README.md
docs/: APP_SUMMARY.md  PROGRAMMATIC_API.md  README.md  SECURITY_FIXES.md  THREEJS_R181_ENHANCEMENTS.md  TODO.md  WASM_INTEGRATION_GUIDE.md  WASM_NEXT_STEPS.md  go-wasm-performance.md
k8s/: 00-namespace.yaml  01-secret.yaml  02-configmap.yaml  03-deployment.yaml  04-service.yaml  05-ingress.yaml  05-ingressroute.yaml  06-job-generate-shapes.yaml  07-valkey.yaml  08-pvc-data.yaml
scripts/: README.md  check-health.sh  clean.sh  dev.sh  prod.sh  setup.sh
templates/: README.md  index.html  index.html-wip
town-builder-physics/: Cargo.toml
(+53 files in other folders)
