[project]
name = "town-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.38.0",
    "pygltflib>=1.16.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "redis>=5.2.0",
    "pydantic>=2.12.0",
    "python-jose[cryptography]>=3.3.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.11.0",
]
