[project]
name = "town-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.119.1",
    "uvicorn[standard]>=0.38.0",
    "pygltflib>=1.16.3",
    "python-dotenv>=1.1.0",
    "httpx>=0.27.0",
    "redis[asyncio]>=5.2.0",
    "pydantic>=2.12.0",
    "authlib>=1.3.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.11.0",
    "aiofiles>=24.1.0",
]
