[project]
name = "town-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "pygltflib>=1.16.5",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
    "redis>=7.1.0",
    "pydantic>=2.12.5",
    "authlib>=1.6.6",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.12.0",
    "aiofiles>=25.1.0",
]
